<resources>
    <string name="app_name">BackgroundServices</string>
    <string name="total_external_memory">Total External Memory</string>
    <string name="external_memory_available">External Memory Available</string>
    <string name="total_internal_memory">Total Internal Memory</string>
    <string name="internal_memory_available">Internal Memory Available</string>
    <string name="ram_size">RAM Size</string>
    <string name="total_steps_today">Total Steps Today</string>
    <string name="service_2">Service 2</string>
    <string name="service_1">Service 1</string>
    <string name="call_logs">Call Logs</string>
    <string name="service_3">Service 3</string>
    <string name="installed_application">Installed Application</string>
    <string name="app_icon">App Icon</string>
    <string name="application_name">Application Name</string>
    <string name="service_4">Service 4</string>
    <string name="installed_apps">Installed Apps</string>
    <string name="service_5">Service 5</string>
    <string name="message">Message</string>
    <string name="endLine">_______________________________________</string>
</resources>
